maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:34: error: not found: value &&
      if ((x!=0)&&(!aMurOuest(x,y)))&&(getIndication(x-1,y)!=9999) {indiqueLeReste(x-1,y,cmpt+1)}
                                    ^JediEscaper:35: error: not found: value &&
      if ((y!=0)&&(!aMurNord(x,y)))&&(getIndication(x,y-1)!=9999) {indiqueLeReste(x,y-1,cmpt+1)}
                                   ^JediEscaper:36: error: not found: value &&
    	if ((x!=xmax-1)&&(!aMurOuest(x+1,y)))&&(getIndication(x+1,y)!=9999)  {indiqueLeReste(x+1,y,cmpt+1)}
                                             ^JediEscaper:37: error: not found: value &&
    	if ((y!=ymax-1)&&(!aMurNord(x,y+1)))&&(getIndication(x,y+1)!=9999)  {indiqueLeReste(x,y+1,cmpt+1)}	
                                            ^